Added Render URL

--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -1213,6 +1213,15 @@
                 "with open('best_model.pkl', 'wb') as file:\n",
                 "    pickle.dump(model, file)"
             ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "URL TO RENDER\n",
+                "\n",
+                "https://fuschiam-ml-web-app-using-flask.onrender.com"
+            ]
         }
     ],
     "metadata": {
